try fixing issue on perspective on iphone

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -11,7 +11,9 @@
     margin-top: -10%;
     margin-left: -20%;
     max-width: 50%;
-    -webkit-perspective-origin-x: 100%;
+    -webkit-transform-origin: 100%;
+    -ms-transform-origin: 100%;
+        transform-origin: 100%;
     -webkit-transform: translateZ(-1px) scale(2);
     transform: translateZ(-1px) scale(2);
 }
@@ -31,7 +33,9 @@
     left: -25%;
     bottom: -20%;
     width: 40%;
-    -webkit-perspective-origin-x: 100%;
+    -webkit-transform-origin: 100%;
+    -ms-transform-origin: 100%;
+        transform-origin: 100%;
     -webkit-transform: translateZ(-1px) scale(2);
     transform: translateZ(-1px) scale(2);
 }
